Fixing non-wrapping text

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ main {
     justify-content: center;
     align-items: center;
     margin-top: 9rem;
+    width: 100%;
 }
 
 /* .title {
